--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
         <activity android:name=".actividades.vendedor.CrearIngredienteActivity" />
         <activity android:name=".actividades.vendedor.FotosComidaActivity" />
         <activity android:name=".actividades.comprador.CrearOrdenActivity" />
-        <activity android:name=".actividades.comprador.SeleccionarItemsActivity"></activity>
+        <activity android:name=".actividades.comprador.SeleccionarItemsActivity" />
+        <activity android:name=".actividades.comprador.VerOrdenesActivity"></activity>
     </application>
 
 </manifest>
