--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.+'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
